--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
     display: inline;
     margin-top:25px;
     padding: 5px;
+    margin-left: 230px;
 }
 #par{
 float: left;
@@ -20,7 +21,7 @@ margin-top: 30px;
 #icon{
     float: right;
     margin-top: -25px;
-    margin-right: 50px;
+    margin-right: 330px;
 
 
 }
@@ -77,7 +78,7 @@ margin-bottom: 0px;
 }
  #figLl{
         text-transform: capitalize;
-        font-size: 20px;
+        font-size: 15px;
         color: gray;
          
     }
@@ -88,11 +89,12 @@ margin-bottom: 0px;
     margin-top: -20px;
     margin-right: 50px;
 font-size: 13px;
+margin-right: 333px;
 }
 .line{
     background-image:url(https://raw.githubusercontent.com/LTUC/amman-201d9/master/class-10/lab-a/lab-assets/hr-img.png);
     height:10px;
-    width: 80%;
+    width: 50%;
     border: 1px solid lightgrey;
 }
 .para{
@@ -100,27 +102,14 @@ font-size: 13px;
     margin-left:25% ;
     margin-right: 25%;
 }
-.container {
-    position: relative;
-    text-align: left;
-    color: black;
-  }
+
   
-  
-  .top-left {
-    position: absolute;
-    top: 8px;
-    left: 16px;
-  }
-  .chbox{
-      display: block;
-  }
-  #btn{
+#btn{
   padding: 14px 40px;
   background-color: maroon;
 float: right;
-margin-top: -50px;
-margin-right: 50px;
+margin-top: -70px;
+margin-right: 331px;
 }
 #person{
     float:left;
@@ -129,15 +118,44 @@ margin-right: 50px;
 }
 .line2{
     height:1px;
-    width: 80%;
+    width: 50%;
     background-color: lightgray;
-    margin-top: 70px;
+    margin-top: -10px;
 
 }
 #img44{
     margin-left: auto;
     margin-right: auto;
     display: block;
-    margin-top: 70px;
-    position: relative;
+    margin-top: 80px;
+    
 }
+
+#cb1 {display: inline-block;
+    margin-left: 15%;
+    margin-top: 50px;}
+
+    #cb2 {display: inline-block;
+        margin-left: 70%;
+    margin-top: -120px;}
+    #cball {display: inline-block;
+        background-image: url(https://raw.githubusercontent.com/LTUC/amman-201d9/master/class-10/lab-a/lab-assets/list-bg.png);
+        width: 50%;
+        height: 200px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        margin-left: 25%;
+        box-shadow: 5px 5px 3px gray;
+        margin-bottom: 50px;
+        margin-top: 50px;
+    }
+
+    #copyRight{
+        text-align: center;
+        color: darkgray;
+        margin-top: 50px;
+    }
+
+    #pint{
+        margin-right: 10px;
+    }
