--- a/css/style.css
+++ b/css/style.css
@@ -159,3 +159,8 @@ margin-right: 331px;
     #pint{
         margin-right: 10px;
     }
+
+
+    input:checked+label{
+        text-decoration: line-through;
+      }
