--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,10 @@ margin-top: 30px;
 }
 #icon{
     float: right;
-    margin-top: -25px;
-    margin-right: 330px;
+   position: relative;
+   right: 330px;
+   bottom: 25px;
+   
 
 
 }
@@ -43,7 +45,7 @@ margin-bottom: 0px;
     color: darkgrey;}
 #choco{
     display: block;
-  margin-left: auto;
+  margin-left: 390px;
   margin-right: auto;
   width: 50%;
 
@@ -86,10 +88,12 @@ margin-bottom: 0px;
 #print{
     float: right;
     color: darkgrey;
-    margin-top: -20px;
-    margin-right: 50px;
+    position: relative;
+    bottom: 20px;
+    right: 330px;
 font-size: 13px;
-margin-right: 333px;
+border: 1px solid red;
+
 }
 .line{
     background-image:url(https://raw.githubusercontent.com/LTUC/amman-201d9/master/class-10/lab-a/lab-assets/hr-img.png);
@@ -108,8 +112,9 @@ margin-right: 333px;
   padding: 14px 40px;
   background-color: maroon;
 float: right;
-margin-top: -70px;
-margin-right: 331px;
+position: relative;
+bottom: 70px;
+right: 331px;
 }
 #person{
     float:left;
@@ -120,7 +125,9 @@ margin-right: 331px;
     height:1px;
     width: 50%;
     background-color: lightgray;
-    margin-top: -10px;
+    position: relative;
+   bottom: 10px;
+   z-index: -1;
 
 }
 #img44{
@@ -136,8 +143,10 @@ margin-right: 331px;
     margin-top: 50px;}
 
     #cb2 {display: inline-block;
-        margin-left: 70%;
-    margin-top: -120px;}
+        position: relative;
+        left: 20%;
+    
+}
     #cball {display: inline-block;
         background-image: url(https://raw.githubusercontent.com/LTUC/amman-201d9/master/class-10/lab-a/lab-assets/list-bg.png);
         width: 50%;
